Minimal VM build fails with undeclared identifier 'MaxVectorSize' after JDK-8252847

XMLWordPrintable

    • b20

      # Symptom
      ```
      * For target hotspot_variant-minimal_libjvm_objs_macroAssembler_x86_arrayCopy_avx3.o:
      ./src/hotspot/cpu/x86/macroAssembler_x86_arrayCopy_avx3.cpp:114:15: error: use of undeclared identifier 'MaxVectorSize'
        bool avx3 = MaxVectorSize > 32 && AVX3Threshold == 0;
                    ^
      1 error generated.
      ```

            Assignee:
            Jie Fu
            Reporter:
            Jie Fu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: