8254351: Minimal VM build fails with undeclared identifier 'MaxVectorSize' after JDK-8252847

Reviewed-by: kvn